_temp/final_check_result.txt
  File "c:\Users\zengj\.qclaw\workspace\stock_data_project\_temp\final_check.py", line 84
    print(f"[2d] DB daily_bar_raw 字段: {[r[1] for r in cur.execute(\"PRAGMA table_info('daily_bar_raw')\").fetchall()]}")
                                                                       ^
SyntaxError: unexpected character after line continuation character
